fix: gpg icon alignment

--- a/frontend/src/style/_commit-details.scss
+++ b/frontend/src/style/_commit-details.scss
@@ -190,7 +190,7 @@
 
 .gpg-status {
   svg {
-    margin: -3px 0;
+    margin: 2px 0 -3px;
   }
 
   &--G {
